<resources>
    <string name="app_name">Phamacy Identifier</string>
    <string name="action_settings">Settings</string>
    <string name="logo">pharmacylogo</string>
    <string name="pharmacy">Name</string>
    <string name="details">Pharmacy details</string>
    <string name="name">name</string>
    <string name="action_refresh">refresh</string>
    <string name="service_name">service name</string>
    <string name="service_description">service_description</string>
    <string name="help">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="help_guide">How to use pharmacy locator</string>
    <string name="doctor_name">Doctor name</string>
    <string name="doctor_contacts">Doctor contacts</string>
    <string name="dr_name">Doctor name</string>
    <string name="dr_contact">Doctor contact</string>
    <string name="user_guide">USER GUIDE</string>
    <string name="user_guide_heading">How to Use the pharmacy Locator android Mobile App</string>
    <string name="refreshing">Refreshing ....</string>
    <string name="title_activity_services">Services</string>
    <string name="services">Services</string>
    <string name="service">Services</string>
    <string name="pharmacy_name">Pharmacy Name</string>
    <string name="pharmacy_location">Pharmacy Location</string>
    <string name="doctor">Doctors</string>
    <string name="title_activity_search">search</string>
    <string name="hello">Hello</string>
    <string name="drugs">Drugs</string>
    <string name="map">Map</string>
    <string name="drug">Drugs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh">The Refresh button</string>
    <string name="refresh_function">The refresh button is used to update the list of the main application interface</string>
    <string name="search">The search button is used for searching for pharmacies within the application</string>
    <string name="text_overflow">The Overflow menu lists other functionalities of the application such as the help and settings</string>
</resources>
