<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.app.simo.phamacylocator.MainActivity">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="0"
        android:title="@string/action_refresh"
        android:icon="@drawable/refresh"
        app:showAsAction="always" />

<!--    <item
        android:id="@+id/action_map"
        android:orderInCategory="1"
        android:title="@string/map"
        app:showAsAction="never" />-->

    <item
        android:id="@+id/action_help"
        android:title="@string/help"
        android:orderInCategory="0"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
